# go-tutor-agent-project

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
go_agent_frontend/: Dockerfile  package-lock.json  package.json
go_agent_frontend/src/: env.d.ts
go_executor_service/: Dockerfile  go.mod  main.go
go_tutor_agent/: Dockerfile  pyproject.toml  requirements.txt
go_tutor_agent/app/: config.py  main.py
go_tutor_agent/app/agent/: agent.py  memory.py  prompt_builder.py
go_tutor_agent/app/agent/prompts/common/: final_reminder.txt  tool_execute_go_code.txt  tool_final_answer.txt  tool_get_creator_information.txt  tool_index_url.txt  tool_read_file_content.txt  tool_search_knowledge_base.txt  tool_translate_text.txt  tools_header.txt
go_tutor_agent/app/agent/prompts/gemini_family/: main_system.txt
go_tutor_agent/app/agent/prompts/mistral_family/: main_system.txt
go_tutor_agent/app/agent/prompts/openai_family/: main_system.txt
go_tutor_agent/app/api/routers/: chat.py
go_tutor_agent/app/scripts/: manage_db.py
go_tutor_agent/app/services/: agent_services.py
go_tutor_agent/app/tools/: code_executor.py  creator_info.py  file_reader.py  final_response.py  knowledge_base.py  registry.py  translator.py
go_tutor_agent/data/: 01_introduccion_entorno.md  02_variables_tipos_datos.md  03_estructuras_control.md  04_datos_compuestos.md  05_funciones.md  06_structs_metodos.md  07_punteros.md  08_interfaces.md  09_manejo_errores.md  10_concurrencia.md
go_tutor_backend/: .gitignore  Dockerfile  pom.xml
monitoring/prometheus/: prometheus.yml
(+57 files in other folders)
